新增线程安全集合类,未完成